--- a/source/_posts/查漏补缺.md
+++ b/source/_posts/查漏补缺.md
@@ -1,15 +1,15 @@
 ---
-title: 面试查漏补缺
+title: 查漏补缺
 date: 2020-05-21 09:57:08
 tags: [面试]
 ---
 
-记录我5月份的面试中一些问题
+记录我的一些问题
 <!-- more -->
 
 ## JS篇
 
-### 作用域
+### 1. 作用域
 
 作用域是在运行代码中特定部分中的变量，函数和对象的可访问性。作用域决定了代码区块中变量和资源的可见性。作用域最大的作用就是隔离变量，不同作用域下的同名变量不会有冲突。
 
@@ -19,11 +19,11 @@ tags: [面试]
 
 - 块级作用域：块级作用域可通过新增命令let和const声明，所声明的变量在指定块的作用域外无法被访问
 
-### 作用域链
+### 2. 作用域链
 
 在内部引用的变量一层一层的寻找对应的值，这种层层关系就是作用域链。作用域链的用途是保证对执行环境有权访问的所有变量和函数的有序访问。
 
-### 执行上下文
+### 3. 执行上下文
 
 JS属于解释型语言，javascript的执行分为：解释和执行
 
@@ -46,3 +46,45 @@ JS属于解释型语言，javascript的执行分为：解释和执行
 - 执行函数代码
 
 - 垃圾回收
+
+### 4. 如何理解this
+
+### 5. 什么是防抖和节流，请用代码实现
+
+### 6. call, apply, bind的区别，手动实现3个方法
+
+### 7. new的过程
+
+### 8. 什么是原型，原型链？
+
+### 9. 闭包的什么，原理是什么？
+
+## CSS篇
+
+### 1. css加载会造成阻塞吗？
+
+css不会阻塞DOM树的解析，会阻塞DOM树的渲染，会阻塞JS的执行
+
+优化方式：
+
+1. 压缩CSS体积
+
+2. 使用CDN资源
+
+3. 合理使用缓存机制
+
+4. 减少Http请求，多个CSS合并为一个
+
+### 2. 有3个div，左右固定，如何实现中间自适应
+
+## Webpack篇
+
+## Vue篇
+
+## React篇
+
+### 1.什么是ref ？ref的作用是什么？
+
+## ES6篇
+
+## Typescript篇
