--- a/source/_posts/查漏补缺.md
+++ b/source/_posts/查漏补缺.md
@@ -194,6 +194,18 @@ new => let obj = {}
 
 内层函数的函数作用域未定义值在上层的函数作用域寻找到,并其执行上层函数时,该值的引用不为0,不会被JS垃圾回收机制回收,保证内层的函数调用的值一直存储在内存中
 
+### 10. 原型上的方法和对象上的方法有哪些区别
+
+1. 对象方法包括构造函数中的方法以及构造函数原型上面的方法，需要通过实例化对象去调用；
+
+2. 类方法，其实这里的类就是一个函数，在js中由于函数也是一个对象，所以可以为函数添加属性以及方法，这种方法在node中用的比较多，不需要通过实例化对象去调用；
+
+3. 原型方法一般用于对象实例共享，比如`Person.prototype.sayName=function(){console.log(this.name);};`在原型上面添加该方法，就能实现共享。这样就不用每一次初始化一个实例的时候，为其分配相应的内存了，原型方法也需要通过实例化对象去调用。
+
+### 11. JS的继承有哪些？
+
+原型链继承, 借用构造函数继承, 组合继承, 原型式继承, 寄生式继承, 寄生组合式继承
+
 ## CSS篇
 
 ### 1. css加载会造成阻塞吗？
@@ -215,6 +227,59 @@ css不会阻塞DOM树的解析，会阻塞DOM树的渲染，会阻塞JS的执行
 ### 3. flex布局有哪些属性
 
 ## Webpack篇
+
+## Http篇
+
+### 1. 一个url从浏览器输入到页面显示发生了什么
+
+查找IP – 建立握手 – 请求 – 服务器处理 – 关闭连接 – 资源解析 – 网页渲染
+
+### 2. Http的缓存有哪些
+
+200：
+
+返回头中的Expires或者Cache-Control
+
+304：
+
+Last-Modify/If-Modify-Since
+
+ETag/If-None-Match
+
+### 3. 跨域有哪些方法
+
+同源策略是浏览器最基本的安全功能。
+通常域名是由以下几部分组成：
+
+<http://www.baidu.com:8080/#abc>
+
+协议://域名:端口号/hash、查询字符串、文件名等
+
+同源策略会限制以下的内容：
+
+1. cookie、localstorage和indexDB无法读取
+
+2. DOM无法获得
+
+3. ajax发送后会被浏览器拦截
+
+当协议、域名、端口号任意一个不相同时，都算作不同域。不同域之间请求资源，就是跨域
+
+跨域并不是http请求发送不出去，请求可以发出去，服务端也能接受并正常返回结果，只是结果被浏览器拦截了。
+
+#### nginx反向代理
+
+类似node中间件代理，需要搭建一个中转nginx服务器，用于转发请求。最简单的跨域方式。只要修改nginx的配置即可解决跨域问题。
+
+#### cors
+
+cors需要浏览器和后台同时支持。 ie8和ie9需要通过XDomainRequest实现。浏览器会自动进行cors通信，所以只要后台实现了cros，就实现了跨域。
+
+服务端设置Access-Control-Allow-Origin就可以开启cors，该属性表示哪些域名可以访问资源。
+
+### 4. 浏览器缓存有哪些
+
+### 5. 代理的原理
 
 ## Vue篇
 
@@ -311,9 +376,9 @@ css不会阻塞DOM树的解析，会阻塞DOM树的渲染，会阻塞JS的执行
 
 ### 3. React多级传递
 
--  Context
+- Context
 
--
+### 4. 原生绑定的事件和react绑定的事件有哪些区别
 
 ## ES6篇
 
